--- a/test-apps/css-styles/style.css
+++ b/test-apps/css-styles/style.css
@@ -1,12 +1,15 @@
-.background-solid {
-	background: yellow;
-}
 
 .background-linear0 {
-	background: linear-gradient(to left top, blue, red);
+	background: linear-gradient(to left top, blue, blue 50%, red 55%, red);
 	border: dashed red 3px;
 	border-radius: 15px;
 }
+
+.background-solid {
+	background: yellow;
+	border-radius: 15px;
+}
+
 
 .background-linear1 {
 	background: linear-gradient(17deg, green, purple);
@@ -21,13 +24,13 @@
 } 
 
 .background-radial0 {
-	background: radial-gradient(ellipse farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%);
+	background: radial-gradient(ellipse farthest-corner at 45px 45px, #00FFFF 0%, rgb(128, 128, 255) 50%, #0000FF 95%);
 	border: ridge red 3px;
 	border-radius: 15px;
 }
 
 .background-radial1 {
-	background-image: radial-gradient(16px at 60px 50%, #000000 0%, #000000 14px, rgba(0, 0, 0, 0.3) 18px, rgba(0, 0, 0, 0.6) 19px); 
+	background-image: radial-gradient(16px at 60px 50%, #000000 0%, #000000 14px, rgb(0, 0, 0) 18px, rgb(0, 70, 0) 19px);
 	border: dotted red 3px;
 	border-radius: 15px;
 }
